// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Output Tests Action Full Rendering 1`] = `
<ActionOutput
  contextId="ec123"
  id="actionOutput1"
  output={
    [
      {
        "content": "Lorem ipsum dolor sit amet",
        "type": 0,
      },
    ]
  }
  showIndexes={true}
>
  <Button
    className="copyButton"
    data-tooltip="Copy result to clipboard"
    focusOnClick={false}
    imageOnly={true}
    onPointerDown={[Function]}
    tabIndex={-1}
  >
    <div
      className="msg button imageOnly copyButton"
      data-tooltip="Copy result to clipboard"
      onMouseDown={[Function]}
      onPointerDown={[Function]}
      role="button"
      style={
        {
          "flexDirection": undefined,
        }
      }
      tabIndex={-1}
    >
      <Icon
        data-tooltip="inherit"
        disabled={false}
        src={65}
      >
        <div
          className="msg icon codicon codicon-copy"
          data-tooltip="inherit"
        />
      </Icon>
    </div>
  </Button>
  <Container
    className="msg actionOutput"
    innerRef={
      {
        "current": <div
          class="msg container fixedScrollbar actionOutput"
          style="flex-direction: column;"
        >
          <div
            style="display: flex; flex: 1; gap: 2px; flex-direction: row;"
          >
            <label
              class="msg resultText error actionLabel"
              style="grid-column: span 2;"
              tabindex="-1"
            >
              <span
                class=""
              >
                Lorem ipsum dolor sit amet
              </span>
            </label>
          </div>
        </div>,
      }
    }
    onPointerDown={[Function]}
    onPointerMove={[Function]}
    onPointerUp={[Function]}
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar actionOutput"
      onPointerDown={[Function]}
      onPointerMove={[Function]}
      onPointerUp={[Function]}
      style={
        {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <div
        style={
          {
            "display": "flex",
            "flex": "1",
            "flexDirection": "row",
            "gap": "2px",
          }
        }
      >
        <Label
          caption="Lorem ipsum dolor sit amet"
          className="actionLabel"
          language="ansi"
          onClick={[Function]}
          style={
            {
              "gridColumn": "span 2",
            }
          }
          tabIndex={-1}
          type={0}
        >
          <label
            className="msg resultText error actionLabel"
            onClick={[Function]}
            style={
              {
                "gridColumn": "span 2",
              }
            }
            tabIndex={-1}
          >
            <span
              className=""
              style={
                {
                  "backgroundColor": undefined,
                  "color": undefined,
                }
              }
            >
              Lorem ipsum dolor sit amet
            </span>
          </label>
        </Label>
      </div>
    </div>
  </Container>
</ActionOutput>
`;

exports[`Action Output Tests Action Full Rendering 2`] = `
HTMLCollection [
  <div
    class="msg icon codicon codicon-copy"
    data-tooltip="inherit"
  />,
]
`;

exports[`Action Output Tests Standard Rendering 1`] = `
<ActionOutput
  contextId="ec123"
  output={[]}
  showIndexes={false}
>
  <Button
    className="copyButton"
    data-tooltip="Copy result to clipboard"
    focusOnClick={false}
    imageOnly={true}
    onPointerDown={[Function]}
    tabIndex={-1}
  >
    <div
      className="msg button imageOnly copyButton"
      data-tooltip="Copy result to clipboard"
      onMouseDown={[Function]}
      onPointerDown={[Function]}
      role="button"
      style={
        {
          "flexDirection": undefined,
        }
      }
      tabIndex={-1}
    >
      <Icon
        data-tooltip="inherit"
        disabled={false}
        src={65}
      >
        <div
          className="msg icon codicon codicon-copy"
          data-tooltip="inherit"
        />
      </Icon>
    </div>
  </Button>
  <Container
    className="msg actionOutput"
    innerRef={
      {
        "current": <div
          class="msg container fixedScrollbar actionOutput"
          style="flex-direction: column;"
        />,
      }
    }
    onPointerDown={[Function]}
    onPointerMove={[Function]}
    onPointerUp={[Function]}
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar actionOutput"
      onPointerDown={[Function]}
      onPointerMove={[Function]}
      onPointerUp={[Function]}
      style={
        {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    />
  </Container>
</ActionOutput>
`;
